[Refactor] 예외처리 추가